Implemented Sorting Function
- Can display sorted events (using the getSortedEvents function)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,14 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp"
+        "variant": "cpp",
+        "any": "cpp",
+        "codecvt": "cpp",
+        "cstring": "cpp",
+        "forward_list": "cpp",
+        "map": "cpp",
+        "fstream": "cpp",
+        "ranges": "cpp",
+        "valarray": "cpp"
     }
 }
